--- a/RegionalCorrelations4.Rmd
+++ b/RegionalCorrelations4.Rmd
@@ -2,6 +2,8 @@
 title: "R Notebook"
 output: html_notebook
 ---
+# REQUIRES: Run "Post-Matlab" first
+- requires 'knew.molten3' to be made
 
 # Inter-regional correlations - TOTAL
 Conditions in this set of graphs:
