--- a/SystemsCorrelations.Rmd
+++ b/SystemsCorrelations.Rmd
@@ -2,6 +2,8 @@
 title: "R Notebook"
 output: html_notebook
 ---
+# REQUIRES: Run "Post-Matlab" first
+- requires 'knew.molten3' to be made
 
 # Systems Correlations
 We are only using density/total cells
